# agentmill

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  irc_config.yaml  mcp_servers.json  multiple_task_orchestrator.py  native_tool_example.py  pyproject.toml  research_agent_orchestrator.py  single_agent_orchestrator.py
agents/templates/: researcher.md
orchestrator/: agent.py  bus.py  config.py  db.py  irc_gateway.py  mcp.py  registry.py  runner.py  task_runner.py  telemetry.py
specs/: spec-agent-configuration.md  spec-agent-lifecycle.md  spec-claude-code-sdk.md  spec-human-irc-gateway.md  spec-inter-agent-communication.md  spec-observability.md  spec-tool-mcp-integration.md
tests/: mock_mcp_server.py  test_agent_transitions.py  test_bus.py  test_config.py  test_irc_live.py  test_registry_mcp.py  test_runner.py  test_telemetry.py
